--- a/client/templates/posts/posts_item.html
+++ b/client/templates/posts/posts_item.html
@@ -11,7 +11,7 @@
         {{description}}
       </p>
       <div>
-        <img src="#" alt="">
+        <img class="avatar" src="https://pbs.twimg.com/profile_images/705898694240051200/sjmKGlYE_bigger.jpg" alt="">
         <span class="author">
           Jaimocho
         </span>
